updating response on successful removal of member from a resource
